# infobot_website

./: .gitignore  .htaccess  .jshintrc  .yo-rc.json  CMakeLists.txt  Gruntfile.js  README.md  afterhours  afterhours.js  app.js  bower.json  package.json  package.xml  package.xml_disabled  server.js  serverdown.js  setup.py
action/: RunQuery.action
client/: index.html
client/app/: app.js
client/app/account/: account.js
client/app/account/login/: login.controller.js
client/app/account/settings/: settings.controller.js
client/app/account/signup/: signup.controller.js
client/app/admin/: admin.controller.js  admin.js
client/app/main/: main.controller.js  main.controller.spec.js  main.js
client/components/auth/: auth.service.js  user.service.js
client/components/mongoose-error/: mongoose-error.directive.js
client/components/navbar/: navbar.controller.js  navbar.html
client/components/socket/: socket.service.js
config/: default.json  passport.js
html-implementation/: dube-camera.html  find-dube.html  main-thumnail.html  main.css  main.html  main.html.bak  main.less  signup.html
launch/: run_rosnodes.launch  run_rosnodes_test.launch  webserver.launch  webserver_test.launch  webservers.launch  webservers_test.launch
max-examples/site1/: projects.css  projects.scss  site_address.txt
max-examples/site2/: site_address.txt  style.css  style.less
max-examples/site3/: site_address.txt  style.css  template.html
models/: queryjob.js  user.js
msg/: QueryJob.msg  Result.msg  User.msg
public/: afterhours.html  angular.html  maintenance.html
public/app/: app.js  directives.js
public/app/controllers/: home-controller.js  wall-controller.js
public/app/views/: header.html  signup.html  wall.html
public/css/: bootstrap.min.css  main.css
public/js/: app.js  directives.js  filters.js  global.js  home.js  home.orig.js  home2.js  main.js  modules.js  modules2.js  wall.js
public/js/controllers/: home-controller.js  liveparser-controller.js  profile-controller.js
public/views/: main.html
routes/: basic.js  comments.js  hearts.js  index.js  queryjobs.js  routes.js  users.js
scripts/: create_queryjob  keyboard_run_query_server
server/config/environment/: development.js  index.js  production.js  test.js
src/infobot_website/: simpler_action_server.py
srv/: CancelQueryJob.srv  ParseQuestion.srv  ScheduleQueryJob.srv  SetQueryJobROSFields.srv
test/: createrandomqueryjob.test.js  routesqueryjob.test.js  test_queryjob_scheduler  test_queryjob_scheduler.test  test_queryjob_scheduler_cancel.py  test_queryjob_scheduler_execution.py  test_queryjob_scheduler_schedule.py  test_queryjob_server  test_queryjob_server.test  test_queryjob_server_cancel.py  test_queryjob_server_execution.py  testutils.py
views/: find-dube.html  find-dube.jade  header.jade  home.jade  index.jade  layout.jade  login.jade  main.html  main.jade  map.jade  menubar.jade  navbar.jade  signup.jade  test.html  test.jade  wall.jade
views/partials/: home.jade  liveparser.jade  profile.jade
