<?xml version="1.0"?>
<package>

  <!-- Package Info -->
  <name>sara_uw_website</name>
  <version>0.0.0</version>
  <description>SARA Framework: InfoBot Website.</description>
  <maintainer email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</maintainer>
  <author email="mjyc@cs.washington.edu">Michael Jae-Yoon Chung</author>
  <license>TODO</license>

  <!-- Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>rospy</build_depend>
  <run_depend>rospy</run_depend>

</package>
